[package]
name = "pml"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A parser for PML, just another format to specify your configs in"
repository = "https://github.com/PhilVoel/PML"
readme = "README.md"
categories = ["config", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
